# SimpleSum.w.CORBA

./: CMakeLists.txt  SimpleIDL.hh  SimpleIDL.idl  SimpleIDLSK.cc  SumCalculationImpl.h  mclient.cpp  mserver.cpp  numbersgenerator.cpp
